<resources>
    <string name="app_name">My Application</string>
    <string name="login_page_title_text">Вход</string>
    <string name="registration_page_title_text">Регистрация</string>
    <string name="chats_page_title_text">Чаты</string>
    <string name="profile_page_title_text">Профиль</string>
    <string name="login_input_field_name">Логин</string>
    <string name="login_hint">example@mail.ru</string>
    <string name="password_input_field_name">Пароль</string>
    <string name="password_hint">****************</string>
    <string name="button_login_text">Войти</string>
    <string name="button_registration_text">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="button_offer_to_registration_text">Нет аккаунта? Зарегистрироваться</string>
    <string name="button_offer_to_login_text">Уже есть аккаунт? Войти</string>
    <string name="button_go_to_profile_description">Profile ImageButton</string>
    <string name="button_go_to_chats_description">Chats ImageButton</string>
    <string name="button_back_to_chats_description">Back to chats ImageButton</string>
    <string name="item_profile_image_description">Profile Image</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="item_chat_name">Zlatan Moldovan</string>
    <string name="chat_name">Zlatan Moldovan</string>
    <string name="item_last_message">Здраво, како си?</string>
    <string name="message_input_hint">Сообщение</string>
    <string name="profile_name">Замятин Александр</string>
    <string name="speak">Владею:</string>
    <string name="want_to_learn">Хочу овладеть:</string>
    <string name="button_send_message_text">Отправка сообщения</string>
</resources>