<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_profile_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/profile_page_title_text"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_go_to_chats"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"
        android:background="transparent"
        android:contentDescription="@string/button_go_to_chats_description"
        android:paddingVertical="10dp"
        android:src="@drawable/message_round_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/textView_profile_page_title" />

    <ImageView
        android:id="@+id/imageView_profile_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/profile_image_description"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/textView_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile_name"
        android:textColor="@color/light_grey"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile_img" />

    <TextView
        android:id="@+id/textView_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/speak"
        android:textColor="@color/light_grey"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_profile_name" />

    <EditText
        android:id="@+id/textView_list_know"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/profile_text_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxHeight="200dp"
        android:minHeight="40dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/textView_speak"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView_want_to_learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/want_to_learn"
        android:textColor="@color/light_grey"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_list_know" />

    <EditText
        android:id="@+id/textView_list_want_to_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/profile_text_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxHeight="200dp"
        android:minHeight="40dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/textView_want_to_learn"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>